[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Entities/DeathViz.gd" type="Script" id=1]
[ext_resource path="res://scripts/ParticleDisabler.gd" type="Script" id=2]

[node name="DeathViz" type="Node2D"]
script = ExtResource( 1 )

[node name="Corpse" type="Sprite" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="DecayTimer" type="Timer" parent="."]
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_DecayTimer_timeout"]
